Update README.md
Updated screenshots showing the interface